fixed popup on mobile version

--- a/src/App.scss
+++ b/src/App.scss
@@ -66,10 +66,11 @@ ol {
   }
 
   @include tablet-2 {
-    transform: translateX(21.6rem);
+    position: relative;
+    right: -20.6rem;
     box-shadow: 0 0 10px -5px rgba(0, 0, 0, 0.5);
     z-index: 2;
-    transition: transform 0.5s ease;
+    transition: right 0.5s ease;
   }
 }
 .tasks {
