--- a/src/components/AddListForm/AddListForm.scss
+++ b/src/components/AddListForm/AddListForm.scss
@@ -14,6 +14,12 @@
     left: 2rem;
   }
 
+  @include tablet-2 {
+    right: 1rem;
+    bottom: 1rem;
+    left: unset;
+  }
+
   &-container {
     position: relative;
   }
