--- a/src/components/MenuButton/MenuButton.scss
+++ b/src/components/MenuButton/MenuButton.scss
@@ -61,7 +61,7 @@
       }
 
       & ~ .sidebar {
-        transform: translateX(0);
+        right: 0;
       }
     }
   }
